--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ version = "1.0.0"
 description = "A module for OpenAI integration"
 requires-python = ">=3.7"
 dependencies = [
-    "openai>=1.66.3",  # Using the new OpenAI client
-    "python-dotenv",  # For handling environment variables
+    "openai>=1.66.3",
+    "python-dotenv",
+    "nanoid"
 ]
 
